Project popup delete button color changed to blue (2nd change)

--- a/popup/styles.css
+++ b/popup/styles.css
@@ -100,6 +100,7 @@ body {
   transition: box-shadow 0.18s, border 0.18s, background 0.18s;
   border: 1.5px solid transparent;
   position: relative;
+  border: 1px solid #ff958c;
 }
 
 .epoclip-card:hover {
@@ -210,7 +211,7 @@ body {
   box-shadow: 0 2px 8px 0 rgba(255, 149, 140, 0.1);
   font-size: 1.18em;
   cursor: pointer;
-  transition: background 0.18s;
+  transition:  0.18s;
 }
 
 .epoclip-btn-share.epoclip-btn-check {
@@ -219,7 +220,7 @@ body {
 }
 
 .epoclip-btn-delete {
-  color: #ffb3b3;
+  color: #0D2149;
   background: none;
   border: none;
   width: 32px;
